<resources>
    <string name="app_name">NotesClone</string>
    <string name="quick_note_on_iphone">Quick Note on iPhone</string>
    <string name="more_powerful_smart_folders">More Powerful Smart Folders</string>
    <string name="remember_one_less_password">Remember One Less Password</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="search_text">Search</string>
    <string name="note_title_text">Enter Title</string>
    <string name="note_content">Enter Content</string>
    <string name="notes_date">Today\'s Date</string>
</resources>