<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_back"
            app:tint="#80FFFFFF" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnSave"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_done"
            app:tint="#80FFFFFF" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/note_title"
        android:textColor="@color/white"
        android:textColorHint="#80FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/view_yellow" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtNoteSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:hint="@string/note_subtitle"
            android:textColor="@color/white"
            android:textColorHint="#80FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNoteContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="top|start"
        android:hint="@string/type_note_here"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textColorHint="#80FFFFFF"
        android:textSize="18sp" />
</LinearLayout>