<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2000000"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="What's New in Notes"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/imvQuickNotes"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:contentDescription="quick_notes_icon"
            android:src="@drawable/ic_event_note"
            app:tint="#FFC107"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imvQuickNotes"
            android:text="@string/quick_note_on_iphone"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle1"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imvQuickNotes"
            android:text="Create new Quick Notes in any app from the Share menu."
            android:textColor="#80FFFFFF"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/imvSmartFolders"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:contentDescription="quick_notes_icon"
            android:src="@drawable/ic_settings"
            app:tint="#FFC107"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imvSmartFolders"
            android:text="@string/more_powerful_smart_folders"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imvSmartFolders"
            android:text="In addition to tags, you can now filter notes by date, attachments, checklists and more."
            android:textColor="#80FFFFFF"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/imvPassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:contentDescription="quick_notes_icon"
            android:src="@drawable/ic_lock"
            app:tint="#FFC107"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvTitle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imvPassword"
            android:text="@string/remember_one_less_password"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle3"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/imvPassword"
            android:text="End-to-end encrypt your locked notes with your device passcode."
            android:textColor="#80FFFFFF"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/background_button_ffc107"
        android:paddingVertical="8dp"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText" />
</LinearLayout>